# Serializer

./: .gitignore  CMakeLists.txt  README.md
BinarySerializer/: BinaryDeserializer.hpp  BinaryPacker.hpp  BinarySerializer.hpp  BinaryUnpacker.hpp  TypeMap.hpp  main.cpp
BinarySerializer.xcodeproj/: project.pbxproj
Tests/: CMakeLists.txt  main.cpp
include/: BinaryPacker.hpp  BinarySerializer.hpp  BinaryUnpacker.hpp  TypeMap.hpp
